fix callback form

--- a/ndi_app/templates/ndi_app/contacts.html
+++ b/ndi_app/templates/ndi_app/contacts.html
@@ -30,7 +30,8 @@
                         <input id="id_theme" type="text" name="theme" placeholder="Тема">
                         <input id="id_phone" type="tel" name="phone" placeholder="Ваш телефон">
                         <textarea id="id_message" name="message" placeholder="Повідомлення"></textarea>
-                        <button type="submit" form="" class="main-form-btn">Надіслати</button>
+{#                        <button type="submit" form="" class="main-form-btn">Надіслати</button>#}
+                        <input type="submit" class="main-form-btn" value="Надіслати">
                     </form>
                 </div>
             </div>
