--- a/ndi_app/templates/ndi_app/base.html
+++ b/ndi_app/templates/ndi_app/base.html
@@ -7,7 +7,7 @@
     <title>НДI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/news_styles.css" %}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/styles.css" %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/contacts_style.css" %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/general.css" %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/reset.css" %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/rest_styles.css" %}" />
