--- a/static/css/contacts_styles.css
+++ b/static/css/contacts_styles.css
@@ -253,6 +253,7 @@ input:focus ~ .header-bar:after {
   border: 1px solid #e6e6e6;
   cursor: pointer; 
   color: #ffffff;
+  text-align: center;
 }
 
 .main-form-btn:hover {
