изменил цвет текста в кнопке в contacts_styles.css

--- a/static/css/contacts_styles.css
+++ b/static/css/contacts_styles.css
@@ -252,7 +252,7 @@ input:focus ~ .header-bar:after {
   background-color: #ce3a3a;
   border: 1px solid #e6e6e6;
   cursor: pointer; 
-  color: #ffffff;
+  color: #98999a;
   text-align: center;
 }
 
