сделал общий класс для всех заголовков h2

--- a/ndi_app/templates/ndi_app/restoration.html
+++ b/ndi_app/templates/ndi_app/restoration.html
@@ -5,7 +5,7 @@
         <section class="main">
         {% if selected_activity.slug == "ekspertiza" %}
 
-            <h2>>Експертиза об’єктів будівництва</h2>
+            <h2 class="main-h2">>Експертиза об’єктів будівництва</h2>
         <div class="div-top">
             <div class="div-top-img">
                 <img src="{% static "image/expertise/div-top-img.png" %}" alt="Експертиза">
