--- a/ndi_app/templates/ndi_app/expertise.html
+++ b/ndi_app/templates/ndi_app/expertise.html
@@ -45,7 +45,7 @@
         </div>
     </header>
     <section class="main">
-        <h2>>Експертиза об’єктів будівництва</h2>
+        <h2 class="main-h2">>Експертиза об’єктів будівництва</h2>
         <div class="div-top">
             <div class="div-top-img">
                 <img src="../../images/expertise/div-top-img.png" alt="Експертиза">
