--- a/ndi_app/templates/ndi_app/news.html
+++ b/ndi_app/templates/ndi_app/news.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <section class="main">
-        <h2>Новини</h2>
+        <h2 class="main-h2">Новини</h2>
         <div class="main-news">
 
             {% for news in all_news %}
