--- a/static/css/general.css
+++ b/static/css/general.css
@@ -177,7 +177,7 @@ input:focus ~ .header-bar:after {
 .main {
   margin: 0 0 50px 0;
 }
-.main h2 {
+.main-h2 {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   font-size: 22px;
